--- a/src/main/gui/visualizza_turno.ui
+++ b/src/main/gui/visualizza_turno.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>327</width>
-    <height>276</height>
+    <width>720</width>
+    <height>560</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>720</width>
+    <height>560</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>720</width>
+    <height>560</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Visualizza Turno</string>
@@ -21,8 +33,8 @@
    <widget class="QPushButton" name="annulla_button">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>220</y>
+      <x>610</x>
+      <y>500</y>
       <width>90</width>
       <height>23</height>
      </rect>
@@ -51,8 +63,8 @@ font:  bold 11px
    <widget class="QPushButton" name="modifica_button">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>220</y>
+      <x>510</x>
+      <y>500</y>
       <width>90</width>
       <height>23</height>
      </rect>
@@ -83,8 +95,8 @@ font:  bold 11px
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>311</width>
-      <height>211</height>
+      <width>711</width>
+      <height>491</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -98,26 +110,26 @@ font:  bold 11px
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>70</y>
-        <width>111</width>
+        <y>50</y>
+        <width>151</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Ora Inizio Turno:</string>
+       <string>Data e Ora Inizio Turno:</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>100</y>
-        <width>111</width>
+        <y>90</y>
+        <width>151</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Ora Fine Turno:</string>
+       <string>Data e Ora Fine Turno:</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_8">
@@ -125,47 +137,21 @@ font:  bold 11px
        <rect>
         <x>10</x>
         <y>130</y>
-        <width>81</width>
+        <width>61</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>ID Servizio:</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="ora_inizio_label">
-      <property name="geometry">
-       <rect>
-        <x>120</x>
-        <y>70</y>
-        <width>100</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
+       <string>Servizio</string>
       </property>
      </widget>
      <widget class="QLabel" name="ora_fine_label">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>100</y>
-        <width>100</width>
-        <height>13</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLabel" name="servizio_label">
-      <property name="geometry">
-       <rect>
-        <x>120</x>
-        <y>130</y>
-        <width>100</width>
-        <height>13</height>
+        <x>170</x>
+        <y>90</y>
+        <width>361</width>
+        <height>16</height>
        </rect>
       </property>
       <property name="text">
@@ -188,10 +174,179 @@ font:  bold 11px
      <widget class="QLabel" name="id_label">
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>170</x>
         <y>10</y>
-        <width>101</width>
+        <width>341</width>
         <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ora_inizio_label">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>50</y>
+        <width>361</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>230</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Cliente:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="tipo_label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>190</y>
+        <width>191</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>150</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>ID:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="data_fine_label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>400</y>
+        <width>191</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="id_servizio_label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>150</y>
+        <width>191</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_12">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>360</y>
+        <width>80</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Data Inizio:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_13">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>400</y>
+        <width>80</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Data Fine:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>190</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Tipo:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="periodicita_label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>320</y>
+        <width>191</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="cliente_label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>230</y>
+        <width>191</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="data_inizio_label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>360</y>
+        <width>191</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="luogo_label">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>270</y>
+        <width>271</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="text">
@@ -201,27 +356,27 @@ font:  bold 11px
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>40</y>
-        <width>111</width>
-        <height>16</height>
+        <x>70</x>
+        <y>270</y>
+        <width>80</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
-       <string>Data:</string>
+       <string>Luogo:</string>
       </property>
      </widget>
-     <widget class="QLabel" name="data_label">
+     <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>40</y>
-        <width>111</width>
+        <x>70</x>
+        <y>320</y>
+        <width>80</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string/>
+       <string>Periodicità:</string>
       </property>
      </widget>
     </widget>
@@ -239,7 +394,7 @@ font:  bold 11px
        </rect>
       </property>
       <property name="text">
-       <string>ID Mezzo:</string>
+       <string>MEZZI</string>
       </property>
      </widget>
      <widget class="QLabel" name="mezzo1_label">
@@ -254,6 +409,59 @@ font:  bold 11px
       <property name="text">
        <string/>
       </property>
+     </widget>
+     <widget class="QTableWidget" name="tabella_mezzi">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>40</y>
+        <width>681</width>
+        <height>401</height>
+       </rect>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>150</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+      <row>
+       <property name="text">
+        <string>DADADAD</string>
+       </property>
+      </row>
+      <column>
+       <property name="text">
+        <string>ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Modello</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Allestimento</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Stato</string>
+       </property>
+      </column>
      </widget>
     </widget>
     <widget class="QWidget" name="operatori_tab_2">
@@ -270,7 +478,7 @@ font:  bold 11px
        </rect>
       </property>
       <property name="text">
-       <string>ID Operatore:</string>
+       <string>OPERATORI</string>
       </property>
      </widget>
      <widget class="QLabel" name="operatore1_label">
@@ -285,6 +493,69 @@ font:  bold 11px
       <property name="text">
        <string/>
       </property>
+     </widget>
+     <widget class="QTableWidget" name="tabella_operatori">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>40</y>
+        <width>681</width>
+        <height>401</height>
+       </rect>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>150</number>
+      </attribute>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>170</number>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderCascadingSectionResizes">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderHighlightSections">
+       <bool>true</bool>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Nome</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Cognome</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Stato</string>
+       </property>
+      </column>
      </widget>
     </widget>
    </widget>
