--- a/src/main/gui/inserimento_turno.ui
+++ b/src/main/gui/inserimento_turno.ui
@@ -28,7 +28,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="dati_tab">
      <attribute name="title">
@@ -74,11 +74,6 @@
       <attribute name="verticalHeaderCascadingSectionResizes">
        <bool>false</bool>
       </attribute>
-      <row>
-       <property name="text">
-        <string>DADADAD</string>
-       </property>
-      </row>
       <column>
        <property name="text">
         <string>ID</string>
@@ -100,12 +95,12 @@
        </property>
       </column>
      </widget>
-     <widget class="QLabel" name="warning_label1">
+     <widget class="QLabel" name="servizio_error">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>150</y>
-        <width>601</width>
+        <x>340</x>
+        <y>350</y>
+        <width>411</width>
         <height>16</height>
        </rect>
       </property>
@@ -323,14 +318,14 @@ font:  bold 11px
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>290</x>
         <y>10</y>
-        <width>91</width>
+        <width>201</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Mezzi disponibili:</string>
+       <string>Seleziona i mezzi dalla tabella</string>
       </property>
      </widget>
      <widget class="QTableWidget" name="tabella_mezzi">
@@ -339,7 +334,7 @@ font:  bold 11px
         <x>10</x>
         <y>40</y>
         <width>721</width>
-        <height>231</height>
+        <height>301</height>
        </rect>
       </property>
       <property name="selectionBehavior">
@@ -360,11 +355,6 @@ font:  bold 11px
       <attribute name="verticalHeaderCascadingSectionResizes">
        <bool>false</bool>
       </attribute>
-      <row>
-       <property name="text">
-        <string>DADADAD</string>
-       </property>
-      </row>
       <column>
        <property name="text">
         <string>ID</string>
@@ -390,8 +380,8 @@ font:  bold 11px
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>280</y>
-        <width>601</width>
+        <y>360</y>
+        <width>721</width>
         <height>16</height>
        </rect>
       </property>
@@ -490,29 +480,6 @@ font:  bold 11px
        <string/>
       </property>
      </widget>
-     <widget class="QComboBox" name="combo_mezzi">
-      <property name="geometry">
-       <rect>
-        <x>160</x>
-        <y>309</y>
-        <width>161</width>
-        <height>27</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_7">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>309</y>
-        <width>141</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Selezionare ID Mezzo:</string>
-      </property>
-     </widget>
      <widget class="QScrollBar" name="verticalScrollBar">
       <property name="geometry">
        <rect>
@@ -526,25 +493,6 @@ font:  bold 11px
        <enum>Qt::Vertical</enum>
       </property>
      </widget>
-     <widget class="QPushButton" name="aggiungi_mezzo_button">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>340</y>
-        <width>31</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>+</string>
-      </property>
-     </widget>
     </widget>
     <widget class="QWidget" name="operatori_tab">
      <attribute name="title">
@@ -553,14 +501,14 @@ font:  bold 11px
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>300</x>
+        <x>260</x>
         <y>10</y>
-        <width>121</width>
+        <width>211</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>Operatori disponibili:</string>
+       <string>Seleziona gli operatori dalla tabella</string>
       </property>
      </widget>
      <widget class="QTableWidget" name="tabella_operatori">
@@ -569,7 +517,7 @@ font:  bold 11px
         <x>10</x>
         <y>40</y>
         <width>721</width>
-        <height>231</height>
+        <height>301</height>
        </rect>
       </property>
       <property name="selectionBehavior">
@@ -626,12 +574,12 @@ font:  bold 11px
        </property>
       </column>
      </widget>
-     <widget class="QLabel" name="warning_label3">
+     <widget class="QLabel" name="operatori_error">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>280</y>
-        <width>741</width>
+        <y>360</y>
+        <width>721</width>
         <height>16</height>
        </rect>
       </property>
@@ -730,29 +678,6 @@ font:  bold 11px
        <string/>
       </property>
      </widget>
-     <widget class="QComboBox" name="combo_operatori">
-      <property name="geometry">
-       <rect>
-        <x>170</x>
-        <y>310</y>
-        <width>161</width>
-        <height>27</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_8">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>310</y>
-        <width>161</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Selezionare ID Operatore:</string>
-      </property>
-     </widget>
      <widget class="QScrollBar" name="verticalScrollBar_2">
       <property name="geometry">
        <rect>
@@ -764,25 +689,6 @@ font:  bold 11px
       </property>
       <property name="orientation">
        <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="aggiungi_operatore_button">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>340</y>
-        <width>31</width>
-        <height>25</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>+</string>
       </property>
      </widget>
     </widget>
@@ -850,9 +756,9 @@ font:  bold 11px
    <widget class="QLabel" name="inserimento_error">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>20</x>
       <y>444</y>
-      <width>271</width>
+      <width>421</width>
       <height>20</height>
      </rect>
     </property>
