--- a/src/main/gui/report.ui
+++ b/src/main/gui/report.ui
@@ -97,6 +97,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QDateEdit" name="a_datepicker">
     <property name="geometry">
@@ -106,6 +109,9 @@
       <width>110</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label">
