--- a/src/main/gui/turni.ui
+++ b/src/main/gui/turni.ui
@@ -234,13 +234,13 @@ font:  bold 11px
      <string>INDIETRO</string>
     </property>
    </widget>
-   <widget class="QDateEdit" name="date_filter">
+   <widget class="QDateEdit" name="da_datepicker">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>70</y>
+      <x>45</x>
+      <y>75</y>
       <width>101</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="calendarPopup">
@@ -355,22 +355,22 @@ font:  bold 11px
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>70</y>
-      <width>81</width>
+      <y>71</y>
+      <width>21</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Filtro Data:</string>
+     <string>Da:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="search_button">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>70</y>
-      <width>91</width>
-      <height>31</height>
+      <x>291</x>
+      <y>76</y>
+      <width>81</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -392,6 +392,32 @@ font:  bold 11px
     </property>
     <property name="text">
      <string>FILTRA</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>70</y>
+      <width>21</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>A:</string>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="a_datepicker">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>75</y>
+      <width>101</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
