--- a/src/main/gui/inserimento_turno.ui
+++ b/src/main/gui/inserimento_turno.ui
@@ -28,7 +28,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="dati_tab">
      <attribute name="title">
@@ -280,7 +280,7 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QPushButton" name="inserisci_button_2">
+     <widget class="QPushButton" name="servizi_button">
       <property name="geometry">
        <rect>
         <x>620</x>
