--- a/src/main/gui/turni.ui
+++ b/src/main/gui/turni.ui
@@ -10,6 +10,18 @@
     <height>587</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>777</width>
+    <height>587</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>777</width>
+    <height>587</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Gestione Turni</string>
   </property>
